--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>What is the capital of India?</h1>
+	<ul type:circle>
+		<li>New Delhi</li>
+		<li>Mumbai</li>
+	</ul>
+	<blockquote cite:"https://en.wikipedia.org/wiki/New_Delhi" class="quote">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
