--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<li>New Delhi</li>
 		<li>Mumbai</li>
 	</ul>
-	<blockquote cite:"https://en.wikipedia.org/wiki/New_Delhi" class="quote">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" class="quote">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
